<?xml version="1.0"?>
<package format="3">
  <name>rr_control_input_manager</name>
  <version>0.7.4</version>
  <description>
    Filter velocity commands by ensuring that message time stamps do not exceed given timeout thresholds.
  </description>

  <maintainer email="nickpadilla@roverrobotics.com">Nicholas Padilla</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
