<?xml version="1.0"?>
<package format="3">
  <name>rr_openrover_description</name>
  <version>0.7.4</version>
  <description>The rr_openrover_description package</description>

  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
