<?xml version="1.0"?>
<package format="3">
  <name>rr_openrover_driver</name>
  <version>0.8.0</version>
  <description>
    Provides an interface between ros and Rover Robotics rover hardware. Inputs to rr_openrover_driver
    include emergency stop and velocity commands.  It outputs diagnostic data such as encoder
    readings and battery charge.
  </description>

  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/rr_openrover_driver</url>
  <author>Jack Kilian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rr_control_input_manager</depend>
  <depend>rr_openrover_driver_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
