<?xml version="1.0"?>
<package format="3">
  <name>rr_openrover_driver_msgs</name>
  <version>0.7.4</version>
  <description>The rr_openrover_driver_msgs package</description>

  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
